--- a/greeting.html
+++ b/greeting.html
@@ -6,6 +6,9 @@
 	<body>
 		<h1>Hello, World!</h1>	
 		<h2>Make one change</h2>
+		<h2>second change</h2>
+		<h3>third change</h3>
+		<h4>fourth change</h4>
 	</body>
 
 </html>
